--- a/servicos.html
+++ b/servicos.html
@@ -36,7 +36,7 @@
 <div class="card mb-3" style="max-width: 540px;">
   <div class="row g-0">
     <div class="col-md-4">
-      <img src="img/Foto de perfil (170x170px).png" class="img-fluid rounded-start" alt="...">
+      <img src="img/placeholders and drawings/logo/Foto de perfil (170x170px).png" class="img-fluid rounded-start" alt="...">
     </div>
     <div class="col-md-8">
       <div class="card-body">
@@ -55,7 +55,7 @@
 <div class="card mb-3" style="max-width: 540px;">
   <div class="row g-0">
     <div class="col-md-4">
-      <img src="img/Foto de perfil (170x170px).png" class="img-fluid rounded-start" alt="...">
+      <img src="img/placeholders and drawings/logo/Foto de perfil (170x170px).png" class="img-fluid rounded-start" alt="...">
     </div>
     <div class="col-md-8">
       <div class="card-body">
@@ -74,7 +74,7 @@
 <div class="card mb-3" style="max-width: 540px;">
   <div class="row g-0">
     <div class="col-md-4">
-      <img src="img/Foto de perfil (170x170px).png" class="img-fluid rounded-start" alt="...">
+      <img src="img/placeholders and drawings/logo/Foto de perfil (170x170px).png" class="img-fluid rounded-start" alt="...">
     </div>
     <div class="col-md-8">
       <div class="card-body">
@@ -95,7 +95,7 @@
 <div class="card mb-3" style="max-width: 540px;">
   <div class="row g-0">
     <div class="col-md-4">
-      <img src="img/Foto de perfil (170x170px).png" class="img-fluid rounded-start" alt="...">
+      <img src="img/placeholders and drawings/logo/Foto de perfil (170x170px).png" class="img-fluid rounded-start" alt="...">
     </div>
     <div class="col-md-8">
       <div class="card-body">
@@ -114,7 +114,7 @@
 <div class="card mb-3" style="max-width: 540px;">
   <div class="row g-0">
     <div class="col-md-4">
-      <img src="img/Foto de perfil (170x170px).png" class="img-fluid rounded-start" alt="...">
+      <img src="img/placeholders and drawings/logo/Foto de perfil (170x170px).png" class="img-fluid rounded-start" alt="...">
     </div>
     <div class="col-md-8">
       <div class="card-body">
