--- a/index.html
+++ b/index.html
@@ -78,16 +78,16 @@
   <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" style="display: flex;">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img/Parceiros-Clientes/logo-prodiet-2025-footer.webp" class="d-block w-50" alt="...">
+      <img src="img/Parceiros-Clientes/logo-prodiet-2025-footer.webp" class="d-block w-50 h-40" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img/Parceiros-Clientes/logo-siena.png" class="d-block w-50" alt="...">
+      <img src="img/Parceiros-Clientes/logo-siena.png" class="d-block w-50 h-40" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img/Parceiros-Clientes/spotflow-logo.webp" class="d-block w-50" alt="...">
+      <img src="img/Parceiros-Clientes/spotflow-logo.webp" class="d-block w-50 h-40" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img/Parceiros-Clientes/logo-rumo.svg" class="d-block w-50" alt="...">
+      <img src="img/Parceiros-Clientes/logo-rumo.svg" class="d-block w-50 h-40" alt="...">
     </div>
   </div>
 </div>
