--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
   <section class="clientes">
     <h2 class="heading"><span>Nossos Parceiros</span></h2>
-  <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" style="display: flex;">
+  <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" style="display: flex; align-self: center;">
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img src="img/Parceiros-Clientes/logo-prodiet-2025-footer.webp" class="d-block w-50 h-10" alt="...">
